--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
-    <script src="app/app.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>whitman</title>
 </head>
