--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
     <script src="app.js"></script>
     <script src="http://underscorejs.org/underscore-min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>whitman</title>
-</head>
-<body ng-app="app">
-  <div ng-controller="poemController">
-  	<h1> {{ title }} </h3>
-  	<pre> {{ poem }} </pre>
-  	<button ng-click="load()">another</button>
-  </div>
-</body>
+      <title>whitman</title>
+  </head>
+  <body ng-app="app">
+    <div ng-controller="poemController" class="poem" ng-click="getPoem()">
+    	<h1>{{title}}</h3>
+    	<pre>{{poem}}</pre>
+    </div>
+  </body>
 </html>
